# line-counter-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  counter.rs  detect.rs  history.rs  lang.rs  main.rs  output.rs  scanner.rs  tui.rs
